<resources>
    <string name="app_name">ExTra - ExpenseTracker</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_start_screen">StartScreen</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="title_activity_welcome">Home Screen</string>

    <!-- Intro Slider Text -->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_title">ExTra - Expense Tracker</string>

    <string name="slide_1_desc">Welcome User!</string>
    <string name="slide_1_desc1">Set your budget</string>
    <string name="slide_1_image">Set your budget</string>

    <string name="slide_2_desc">Add Expense</string>
    <string name="slide_2_image">Add Expense</string>

    <string name="slide_3_desc">View Graphs and</string>
    <string name="slide_3_desc1">You are good to go</string>
    <string name="slide_3_image">View Stats</string>

    <!-- Add Expense Text -->
    <string name="enter_expense_amount">Enter expense amount</string>
    <string name="what_was_this_expense_for">What was this expense for?</string>
    <string name="select_expense_date_and_time">Select expense date and time</string>
    <string name="category">Select a single category</string>
    <string name="bills">Bills</string>
    <string name="groceries">Groceries</string>
    <string name="entertainment">Entertainment</string>
    <string name="fuel">Fuel</string>
    <string name="foodndrinks"><![CDATA[Food & Drinks]]></string>
    <string name="health">Health</string>
    <string name="travel">Travel</string>
    <string name="shopping">Shopping</string>
    <string name="other">Other</string>
    <string name="add_a_note">Add a note (optional)</string>
    <string name="add_tags">Add tags (optional)</string>
    <string name="save_btn_text">Save</string>

    <!-- Register Form Error Text -->
    <string name="register_title">Welcome to ExTra - Expense Tracker</string>
    <string name="register_header">Register</string>
    <string name="register_sub_header">Enter your details</string>
    <string name="hint_name">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobile_no">Mob Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_mobile_no">Enter valid mobile no</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_msg_confirm_password">Passwords do not match</string>

    <string name="button_label_on">\u2713 on</string>
    <string name="button_label_off">off</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="add_a_new_expense">Add a new Expense</string>
    <string name="view_analytics">View analytics</string>
    <string name="food">Food</string>
    <string name="_01_01_2017_10_00_am">01/01/2017 10:00 AM</string>
    <string name="expense_category_icon">Expense Category Icon</string>
    <string name="_150">₹150</string>
    <string name="logout">Logout</string>
    <string name="create_acc">Create a new account</string>

    <string-array name="dropdown_list">
        <item>Graph</item>
        <item>Pie Chart</item>
    </string-array>

</resources>
