<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comexpensetracker.medium.extra_expensetracker.AddExpense">

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/message"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:id="@+id/expenseNameIcon" />

    <EditText
        android:id="@+id/expenseNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/expenseNameIcon"
        android:layout_marginLeft="90dp"
        android:width="250dp"
        android:ems="10"
        android:hint="@string/what_was_this_expense_for"
        android:inputType="text" />

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/amt_icon"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="30dp"
        android:id="@+id/expenseAmtIcon" />

    <EditText
        android:id="@+id/expenseAmtText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/expenseAmtIcon"
        android:layout_marginLeft="90dp"
        android:width="250dp"
        android:ems="10"
        android:hint="@string/enter_expense_amount"
        android:inputType="number" />

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/calendar_icon"
        android:layout_marginTop="170dp"
        android:layout_marginLeft="30dp"
        android:id="@+id/expenseTimestampIcon" />

    <EditText
        android:id="@+id/expenseTimestampText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/expenseTimestampIcon"
        android:layout_marginLeft="90dp"
        android:width="250dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/select_expense_date_and_time"
        android:inputType="none" />

</RelativeLayout>
