<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fabFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fab_margin"
    android:paddingRight="@dimen/fab_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layoutLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="300dp"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:cardCornerRadius="5dp"
            app:cardElevation="@dimen/cardview_default_elevation"
            app:cardUseCompatPadding="true" >
            <TextView
                android:id="@+id/logoutTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textStyle="bold"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />
        </android.support.v7.widget.CardView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_name"
            app:backgroundTint="#FFEFD5"
            android:layout_margin="10dp"
            app:fabSize="normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutViewAnalytics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="210dp"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:cardCornerRadius="5dp"
            app:cardElevation="@dimen/cardview_default_elevation"
            app:cardUseCompatPadding="true" >
            <TextView
                android:id="@+id/goViewAnalyticsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_analytics"
                android:textStyle="bold"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />
        </android.support.v7.widget.CardView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/goToViewAnalytics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_insert_chart_black_24dp"
            app:backgroundTint="@color/dot_light_screen2"
            android:layout_margin="10dp"
            app:fabSize="normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="120dp"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:cardCornerRadius="5dp"
            app:cardElevation="@dimen/cardview_default_elevation"
            app:cardUseCompatPadding="true" >
            <TextView
                android:id="@+id/goToAddExpenseTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_a_new_expense"
                android:textStyle="bold"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />
        </android.support.v7.widget.CardView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/goToAddExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_black_24dp"
            app:backgroundTint="@color/dot_light_screen1"
            android:layout_margin="10dp"
            app:fabSize="normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutNextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_navigate_next_black_24dp"
            app:backgroundTint="@color/dot_light_screen3"
            android:layout_margin="10dp"
            app:fabSize="normal" />

    </LinearLayout>

</FrameLayout>